# gtest_training

./: CMakeLists.txt
matchers/: 00_matchers.cpp  01_matchers_with_mocks.cpp  02_matcher_obects.cpp  CMakeLists.txt
mocks/: 00_no_mocks_slow_db_connection.cpp  01_no_mocks_slow_db_connection_refactored.cpp  02_what_is_mock.cpp  03_db_mocked_strict_mock_nice_mock.cpp  04_save_args.cpp  05_invoke.cpp  06_unique_ptrs_in_args.cpp  07_unique_ptrs_in_args_fix.cpp  08_unique_ptrs_in_return.cpp  09_unique_ptrs_final_solution.cpp  CMakeLists.txt  DatabaseMock.h
mocks/code/: Database.cpp  Database.h  DatabaseFactory.cpp  DatabaseFactory.h  IDatabase.h  Solution.cpp  Solution.h
mocks/code2/: UsefulClass.h
mocks/code_for_unique_ptr/: FooUser.cpp  FooUser.h  IFoo.h
output_to_files/: CMakeLists.txt  RedirectOutput.cpp  RedirectOutput.hpp  SomeTest.cpp  gmain.cpp
parametrized/: 00_version_with_multiple_single_tests.cpp  01_version_with_fixture.cpp  02_version_with_3_5_and_2_3_in_one_fixture.cpp  03_version_with_3_5_and_2_3_in_two_fixtures.cpp  04_parametrized.cpp  05_parametrized_derived.cpp  06_variable_length_parametrized_test.cpp  07_variable_length_parametrized_std_any.cpp  CMakeLists.txt
parametrized/code/: Database.cpp  Database.h  Solution.cpp  Solution.h
whats_inside/: CMakeLists.txt  mock.cpp  simple_test.cpp
